--- a/fe/src/pages/News/New.css
+++ b/fe/src/pages/News/New.css
@@ -170,11 +170,11 @@ body {
   justify-content: center;
   align-items: center;
   width: 32px;
-  height: 32px;
+  height: 24px;
   font-size: 16px;
   color: #4b5563;
   text-decoration: none;
-  border-radius: 50%;
+  border-radius: 12px;
   transition: all 0.3s ease;
 }
 
