--- a/fe/src/pages/HomePage/HomePage.css
+++ b/fe/src/pages/HomePage/HomePage.css
@@ -377,6 +377,8 @@ a {
   color: white;
   padding: 0.5rem 1.5rem;
   border-radius: 9999px;
+  width: 110%;
+  max-width: 110%;
 }
 
 .hn-btn--round:hover {
@@ -405,7 +407,7 @@ a {
 .hn-hero {
   position: relative;
   height: 100vh;
-  border-bottom: 3px solid rgba(0, 0, 0, 0.3);
+  border-bottom: 5px solid #ffd700;
 }
 
 .hn-hero__carousel {
@@ -581,7 +583,7 @@ a {
 .hn-about {
   padding: 4rem 0;
   position: relative;
-  border-top: 3px solid rgba(0, 0, 0, 0.3);
+  border-top: 5px solid #ffd700;
 }
 
 .hn-section__bg {
@@ -636,6 +638,9 @@ a {
   border-radius: 0.5rem;
   text-align: center;
   transition: all 0.3s ease;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .hn-about__icon {
@@ -645,7 +650,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
-  margin: 0 auto 1.5rem;
+  margin: 0 auto;
 }
 
 .hn-about__text {
